// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sustainability renders correctly with all props 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c15 {
  margin-top: 0.5rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: var(--color-headline);
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c10 {
  border: 1px solid var(--color-highlight);
  background: var(--color-badge-bg);
  color: var(--color-paragraph);
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c16 {
  border: 1px solid var(--color-highlight);
  background: var(--color-badge-bg);
  color: var(--color-paragraph);
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--color-highlight);
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c7 {
  max-width: 680px;
  line-height: 1.7;
  margin-bottom: 3rem;
}

.c8 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-size: 0.875rem;
  font-weight: 700;
  letter-spacing: 0.12em;
  text-transform: uppercase;
  color: var(--color-highlight);
  margin: 0 0 1.5rem;
}

.c9 {
  list-style: none;
  margin: 0 0 3rem;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.c11 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
}

.c12 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  padding: 1.5rem 0;
  border-top: 1px solid var(--color-main);
}

.c12:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c13 {
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.25rem;
  color: var(--color-headline);
}

.c14 {
  font-size: 0.75rem;
  margin: 0;
}

.c17 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0;
}

@media (max-width: 1199px) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 1199px) {
  .c5 {
    margin-bottom: 1.5rem;
  }
}

@media (max-width: 1199px) {
  .c7 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c12 {
    grid-template-columns: 200px 1fr;
    gap: 2rem;
  }
}

<div>
  <section
    class="c0"
    id="sustainability"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Values & Action
      </p>
      <h2
        class="c4 c5"
      >
        Sustainability matters to me
      </h2>
      <p
        class="c6 c7"
      >
        I believe the tech industry has a responsibility to build lighter, more mindful products. Outside of work, I act on that belief — from how I run this site to how I spend my weekends.
      </p>
      <div
        class=""
      >
        <h3
          class="c8"
        >
          What I care about
        </h3>
        <ul
          aria-label="What I care about"
          class="c9"
        >
          <li
            class="c10"
          >
            Environment
          </li>
          <li
            class="c10"
          >
            Animal Welfare
          </li>
          <li
            class="c10"
          >
            Social Services
          </li>
          <li
            class="c10"
          >
            Disaster & Humanitarian Relief
          </li>
          <li
            class="c10"
          >
            Education
          </li>
          <li
            class="c10"
          >
            Science & Technology
          </li>
        </ul>
      </div>
      <div
        class=""
      >
        <h3
          class="c8"
        >
          Where I've shown up
        </h3>
        <ol
          aria-label="Where I've shown up"
          class="c11"
        >
          <li
            class="c12"
          >
            <div
              class=""
            >
              <p
                class="c2 c13"
              >
                Clean Up Your City
              </p>
              <p
                class="c2 c14"
              >
                May – Sep 2024
              </p>
              <div
                class="c15"
              >
                <span
                  class="c16"
                >
                  Environment
                </span>
              </div>
            </div>
            <p
              class="c2 c17"
            >
              Monthly clean-up initiatives in Amsterdam city center, working with residents and local entrepreneurs to maintain public spaces.
            </p>
          </li>
          <li
            class="c12"
          >
            <div
              class=""
            >
              <p
                class="c2 c13"
              >
                NDSM Cleans Up
              </p>
              <p
                class="c2 c14"
              >
                Jun – Sep 2024
              </p>
              <div
                class="c15"
              >
                <span
                  class="c16"
                >
                  Environment
                </span>
              </div>
            </div>
            <p
              class="c2 c17"
            >
              Monthly clean-up events at NDSM Wharf, Amsterdam's former industrial shipyard turned cultural hub.
            </p>
          </li>
          <li
            class="c12"
          >
            <div
              class=""
            >
              <p
                class="c2 c13"
              >
                About Waste
              </p>
              <p
                class="c2 c14"
              >
                Jun 2024
              </p>
              <div
                class="c15"
              >
                <span
                  class="c16"
                >
                  Environment
                </span>
              </div>
            </div>
            <p
              class="c2 c17"
            >
              Volunteered at the Silent Disco Party Cleanup at IJ-Hallen, Europe's largest flea market, combining environmental action with community fun.
            </p>
          </li>
          <li
            class="c12"
          >
            <div
              class=""
            >
              <p
                class="c2 c13"
              >
                Serve the City Amsterdam
              </p>
              <p
                class="c2 c14"
              >
                May – Sep 2024
              </p>
              <div
                class="c15"
              >
                <span
                  class="c16"
                >
                  Environment
                </span>
              </div>
            </div>
            <p
              class="c2 c17"
            >
              Community clean-up events at Vondelpark, supporting the park maintenance team in keeping one of Amsterdam's most visited public spaces clean.
            </p>
          </li>
          <li
            class="c12"
          >
            <div
              class=""
            >
              <p
                class="c2 c13"
              >
                Stichting Care4Good Foundation
              </p>
              <p
                class="c2 c14"
              >
                Mar 2024
              </p>
              <div
                class="c15"
              >
                <span
                  class="c16"
                >
                  Social Services
                </span>
              </div>
            </div>
            <p
              class="c2 c17"
            >
              Helped unload and organize donated furniture for people experiencing homelessness and Ukrainian refugees.
            </p>
          </li>
          <li
            class="c12"
          >
            <div
              class=""
            >
              <p
                class="c2 c13"
              >
                Municipality of Casalecchio di Reno
              </p>
              <p
                class="c2 c14"
              >
                Jun – Jul 2009
              </p>
              <div
                class="c15"
              >
                <span
                  class="c16"
                >
                  Education
                </span>
              </div>
            </div>
            <p
              class="c2 c17"
            >
              Student volunteer at a summer youth program, supporting children's daily activities and ensuring their safety and wellbeing.
            </p>
          </li>
        </ol>
      </div>
    </section>
  </section>
</div>
`;

exports[`Sustainability renders correctly with minimal props 1`] = `
.c0 {
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.c1 {
  display: grid;
  position: relative;
  min-height: auto;
  width: 100%;
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  column-gap: calc(24px);
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  color: var(--color-headline);
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c6 {
  color: var(--color-paragraph);
  font-size: 1.25rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c9 {
  border: 1px solid var(--color-highlight);
  background: var(--color-badge-bg);
  color: var(--color-paragraph);
  border-radius: 9999px;
  display: inline-block;
  font-size: 0.875rem;
  padding: 0.5rem 1rem;
}

.c3 {
  font-size: 0.75rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  color: var(--color-highlight);
  margin: 0 0 1.25rem;
}

.c5 {
  margin: 0 0 2rem;
  max-width: 600px;
}

.c7 {
  max-width: 680px;
  line-height: 1.7;
  margin-bottom: 3rem;
}

.c8 {
  list-style: none;
  margin: 0 0 3rem;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
}

.c10 {
  list-style: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
}

.c11 {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
  padding: 1.5rem 0;
  border-top: 1px solid var(--color-main);
}

.c11:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c12 {
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.25rem;
  color: var(--color-headline);
}

.c13 {
  font-size: 0.75rem;
  margin: 0;
}

.c14 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0;
}

@media (max-width: 1199px) {
  .c0 {
    padding-top: 2rem;
    padding-bottom: 2rem;
  }
}

@media (min-width: 600px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
    column-gap: calc(24px);
  }
}

@media (min-width: 900px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
    column-gap: calc(36px);
  }
}

@media (min-width: 1200px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
    column-gap: calc(81px);
  }
}

@media (min-width: 1536px) {
  .c1 {
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
    column-gap: calc(121.5px);
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 1199px) {
  .c5 {
    margin-bottom: 1.5rem;
  }
}

@media (max-width: 1199px) {
  .c7 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c11 {
    grid-template-columns: 200px 1fr;
    gap: 2rem;
  }
}

<div>
  <section
    class="c0"
    id="sustainability"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Values & Action
      </p>
      <h2
        class="c4 c5"
      >
        Sustainability matters to me
      </h2>
      <p
        class="c6 c7"
      >
        I believe the tech industry has a responsibility to build lighter, more mindful products.
      </p>
      <div
        class=""
      >
        <ul
          aria-label="Values"
          class="c8"
        >
          <li
            class="c9"
          >
            Environment
          </li>
          <li
            class="c9"
          >
            Education
          </li>
        </ul>
      </div>
      <div
        class=""
      >
        <ol
          aria-label="Volunteering"
          class="c10"
        >
          <li
            class="c11"
          >
            <div
              class=""
            >
              <p
                class="c2 c12"
              >
                Clean Up Your City
              </p>
              <p
                class="c2 c13"
              >
                May – Sep 2024
              </p>
            </div>
            <p
              class="c2 c14"
            >
              Monthly clean-up initiatives in Amsterdam city center.
            </p>
          </li>
        </ol>
      </div>
    </section>
  </section>
</div>
`;
